--- a/infrastructure/verified-permissions.yaml
+++ b/infrastructure/verified-permissions.yaml
@@ -1,120 +1,156 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Visitor Management Verified Permissions resources
 
+Parameters:
+  AdminGroupName:
+    Type: String
+  ResidentGroupName:
+    Type: String
+  GuardGroupName:
+    Type: String
+
 Resources:
-  VisitorManagementPolicyStore:
+  VisitorManagementPolicyStoreNew:
     Type: AWS::VerifiedPermissions::PolicyStore
     Properties:
       Schema:
         CedarJson: |
           {
             "VisitorManagement": {
-              "entityTypes": {
-                "User": {
-                  "memberOfTypes": [
-                    "UserGroup"
-                  ],
-                  "shape": {
-                    "type": "Record",
-                    "attributes": {}
-                  }
+                "entityTypes": {
+                    "User": {
+                        "memberOfTypes": [
+                            "UserGroup"
+                        ],
+                        "shape": {
+                            "type": "Record",
+                            "attributes": {}
+                        }
+                    },
+                    "Resource": {
+                        "memberOfTypes": [],
+                        "shape": {
+                            "type": "Record",
+                            "attributes": {}
+                        }
+                    },
+                    "UserGroup": {
+                        "memberOfTypes": [],
+                        "shape": {
+                            "type": "Record",
+                            "attributes": {}
+                        }
+                    }
                 },
-                "Visitor": {
-                  "memberOfTypes": [],
-                  "shape": {
-                    "type": "Record",
-                    "attributes": {}
-                  }
-                },
-                "UserGroup": {
-                  "memberOfTypes": [],
-                  "shape": {
-                    "type": "Record",
-                    "attributes": {}
-                  }
+                "actions": {
+                    "showAdminBadge": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    },
+                    "showGuardBadge": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    },
+                    "searchVisitor": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    },
+                    "registerVisitor": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    },                    
+                    "inviteVisitor": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    },                    
+                    "verifyVisitor": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    },                    
+                    "browseVisitors": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    }
                 }
-              },
-              "actions": {
-                "searchVisitor": {
-                  "appliesTo": {
-                    "context": {
-                      "type": "Record",
-                      "attributes": {}
-                    },
-                    "principalTypes": [
-                      "User"
-                    ],
-                    "resourceTypes": [
-                      "Visitor"
-                    ]
-                  }
-                },
-                "registerVisitor": {
-                  "appliesTo": {
-                    "context": {
-                      "type": "Record",
-                      "attributes": {}
-                    },
-                    "principalTypes": [
-                      "User"
-                    ],
-                    "resourceTypes": [
-                      "Visitor"
-                    ]
-                  }
-                },
-                "inviteVisitor": {
-                  "appliesTo": {
-                    "context": {
-                      "type": "Record",
-                      "attributes": {}
-                    },
-                    "principalTypes": [
-                      "User"
-                    ],
-                    "resourceTypes": [
-                      "Visitor"
-                    ]
-                  }
-                },
-                "verifyVisitor": {
-                  "appliesTo": {
-                    "context": {
-                      "type": "Record",
-                      "attributes": {}
-                    },
-                    "principalTypes": [
-                      "User"
-                    ],
-                    "resourceTypes": [
-                      "Visitor"
-                    ]
-                  }
-                },
-                "browseVisitors": {
-                  "appliesTo": {
-                    "context": {
-                      "type": "Record",
-                      "attributes": {}
-                    },
-                    "principalTypes": [
-                      "User"
-                    ],
-                    "resourceTypes": [
-                      "Visitor"
-                    ]
-                  }
-                }
-              }
             }
           }
       ValidationSettings:
         Mode: STRICT
 
-  AllowAdminGroupAccessPolicy:
+  AllowAdminGroupAccessPolicyNew:
     Type: AWS::VerifiedPermissions::Policy
     Properties:
-      PolicyStoreId: !Ref VisitorManagementPolicyStore
+      PolicyStoreId: !Ref VisitorManagementPolicyStoreNew
       Definition:
         Static:
           Statement: !Sub |
@@ -125,14 +161,14 @@ Resources:
                     VisitorManagement::Action::"inviteVisitor",
                     VisitorManagement::Action::"registerVisitor",
                     VisitorManagement::Action::"searchVisitor",
-                    VisitorManagement::Action::"verifyVisitor"],
-                resource == VisitorManagement::Visitor::"visitorResource"
+                    VisitorManagement::Action::"verifyVisitor",
+                    VisitorManagement::Action::"showAdminBadge"],
+                resource == VisitorManagement::Resource::"visitorResource"
             );
-
   AllowResidentGroupAccessPolicy:
     Type: AWS::VerifiedPermissions::Policy
     Properties:
-      PolicyStoreId: !Ref VisitorManagementPolicyStore
+      PolicyStoreId: !Ref VisitorManagementPolicyStoreNew
       Definition:
         Static:
           Statement: !Sub |
@@ -142,19 +178,23 @@ Resources:
                     [VisitorManagement::Action::"browseVisitors",
                     VisitorManagement::Action::"inviteVisitor",
                     VisitorManagement::Action::"registerVisitor"],
-                resource == VisitorManagement::Visitor::"visitorResource"
+                resource == VisitorManagement::Resource::"visitorResource"
             );
-
-  AllowGuardGroupAccessPolicy:
+  AllowGuardGroupAccessPolicyNew:
     Type: AWS::VerifiedPermissions::Policy
     Properties:
-      PolicyStoreId: !Ref VisitorManagementPolicyStore
+      PolicyStoreId: !Ref VisitorManagementPolicyStoreNew
       Definition:
         Static:
           Statement: !Sub |
             permit (
                 principal in VisitorManagement::UserGroup::"${GuardGroupName}",
                 action in [VisitorManagement::Action::"verifyVisitor",
-                           VisitorManagement::Action::"searchVisitor"],
-                resource == VisitorManagement::Visitor::"visitorResource"
+                           VisitorManagement::Action::"searchVisitor",
+                           VisitorManagement::Action::"showGuardBadge"],
+                resource == VisitorManagement::Resource::"visitorResource"
             );
+
+Outputs:
+  VisitorManagementPolicyStoreNew:
+    Value: !Ref VisitorManagementPolicyStoreNew
