--- a/template.yaml
+++ b/template.yaml
@@ -120,7 +120,7 @@ Resources:
                                 "Resource"
                             ]
                         }
-                    },                    
+                    },
                     "inviteVisitor": {
                         "appliesTo": {
                             "context": {
@@ -134,7 +134,7 @@ Resources:
                                 "Resource"
                             ]
                         }
-                    },                    
+                    },
                     "verifyVisitor": {
                         "appliesTo": {
                             "context": {
@@ -148,7 +148,7 @@ Resources:
                                 "Resource"
                             ]
                         }
-                    },                    
+                    },
                     "browseVisitors": {
                         "appliesTo": {
                             "context": {
@@ -245,11 +245,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTableName
+            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTableName
+          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -311,13 +311,13 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTableName
+            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
       Environment:
         Variables:
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           # Make table name accessible as environment variable from function code during execution
-          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTableName
+          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
       Events:
         Api:
           Type: Api
@@ -349,11 +349,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTableName
+            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTableName
+          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -381,11 +381,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.InviteLinksTableName
+            TableName: !GetAtt DatabaseStack.Outputs.InviteLinksTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          INVITE_LINKS_TABLE: !GetAtt DatabaseStack.Outputs.InviteLinksTableName
+          INVITE_LINKS_TABLE: !GetAtt DatabaseStack.Outputs.InviteLinksTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -413,11 +413,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTableName
+            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTableName
+          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -448,10 +448,10 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTableName
+            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTable
       Environment:
         Variables:
-          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTableName
+          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           APP_FRONTEND_BASE_URL: https://vms.alphinecodetech.click
@@ -479,13 +479,13 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the InviteLinksTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.InviteLinksTableName
+            TableName: !GetAtt DatabaseStack.Outputs.InviteLinksTable
       Environment:
         Variables:
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           APP_FRONTEND_BASE_URL: https://vms.alphinecodetech.click
-          INVITE_LINKS_TABLE: !GetAtt DatabaseStack.Outputs.InviteLinksTableName
+          INVITE_LINKS_TABLE: !GetAtt DatabaseStack.Outputs.InviteLinksTable
       Events:
         Api:
           Type: Api
@@ -510,12 +510,12 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitRequestsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTableName
+            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
       Environment:
         Variables:
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
-          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTableName
+          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
       Events:
         Api:
           Type: Api
@@ -531,10 +531,15 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: ./infrastructure/dynamodb-stack.yaml
-      Parameters:
-        AdminGroupName: !Ref AdminGroupName
-        ResidentGroupName: !Ref ResidentGroupName
-        GuardGroupName: !Ref GuardGroupName
+
+  # AuthorizationStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Properties:
+  #     TemplateURL: ./infrastructure/verified-permissions.yaml
+  #     Parameters:
+  #       AdminGroupName: !Ref AdminGroupName
+  #       ResidentGroupName: !Ref ResidentGroupName
+  #       GuardGroupName: !Ref GuardGroupName
 
   # VisitorsTable:
   #   Type: AWS::DynamoDB::Table
